objects/MMPJ_Ext_Vign_Acompte_UVPC__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - Used for Cognac</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_Choix__c</fullName>
        <label>Choix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>45%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Commentaires__c</fullName>
        <label>Commentaires</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contrat_Millesime__c</fullName>
        <formula>MMPJ_Ext_Vign_Contrat__r.MMPJ_Ext_Vign_Millesime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Millésime</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contrat_Vol_Annuel_Valide__c</fullName>
        <description>Label volume annuel validé remplacé par Volume Annuel</description>
        <formula>MMPJ_Ext_Vign_Contrat__r.MMPJ_Ext_Vign_Volume_Annuel_Valide__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume annuel</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contrat_VolumeContrat__c</fullName>
        <formula>MMPJ_Ext_Vign_Contrat__r.MMPJ_Ext_Vign_Volume_CTR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume du contrat</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contrat_Volume_AP_prevu__c</fullName>
        <formula>MMPJ_Ext_Vign_Contrat__r.MMPJ_Ext_Vign_AP_previsionnel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume AP prévu (hL)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contrat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrat</label>
        <referenceTo>MMPJ_Ext_Vign_Contrat__c</referenceTo>
        <relationshipLabel>Acomptes UVPC</relationshipLabel>
        <relationshipName>Acomptes_UVPC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Cru__c</fullName>
        <formula>TEXT( MMPJ_Ext_Vign_Contrat__r.MMPJ_Ext_Vign_Cru__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cru</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date__c</fullName>
        <label>Date du choix</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Livreur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Livreur</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Acomptes UVPC</relationshipLabel>
        <relationshipName>AcomptesUVPC_Livreur</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Volume pas encore renseigné</fullName>
                </value>
                <value>
                    <fullName>Volume en attente de validation</fullName>
                </value>
                <value>
                    <fullName>Volume validé</fullName>
                </value>
                <value>
                    <fullName>En attente de validation</fullName>
                    <isActive>false</isActive>
                    <label>En attente de validation</label>
                </value>
                <value>
                    <fullName>Pas encore renseigné</fullName>
                    <isActive>false</isActive>
                    <label>Pas encore renseigné</label>
                </value>
                <value>
                    <fullName>Validé</fullName>
                    <isActive>false</isActive>
                    <label>Validé</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Volume_calcul_acompte__c</fullName>
        <description>Label Volume pour calcul de l’acompte calcul de l’acompte a été remplacé par Volume confirmé pour livraison</description>
        <label>Volume confirmé pour livraison</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <label>Acompte UVPC</label>
    <listViews>
        <fullName>Acompte_Vol_Statut</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Livreur__c</columns>
        <columns>MMPJ_Ext_Vign_Choix__c</columns>
        <columns>MMPJ_Ext_Vign_Date__c</columns>
        <columns>MMPJ_Ext_Vign_Volume_calcul_acompte__c</columns>
        <columns>MMPJ_Ext_Vign_Contrat_Vol_Annuel_Valide__c</columns>
        <columns>MMPJ_Ext_Vign_Statut__c</columns>
        <filterScope>Everything</filterScope>
        <label>Acompte - Vol - Statut</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Date__c</columns>
        <columns>MMPJ_Ext_Vign_Cru__c</columns>
        <columns>MMPJ_Ext_Vign_Choix__c</columns>
        <columns>MMPJ_Ext_Vign_Contrat__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ACC-{000000}</displayFormat>
        <label>Numéro Acompte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acomptes UVPC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>